<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backround_levels"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/container3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_btn_stroke_press"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/button_back"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:id="@+id/container4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/line1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/fold_lvl1"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/style_gamelevels"
                                android:text="@string/one"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/style_gamelevels"
                                android:text="@string/two"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/style_gamelevels"
                                android:text="@string/three"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/style_gamelevels"
                                android:text="@string/thou"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/style_gamelevels"
                                android:text="@string/five"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>