<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

 <ImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backround_levels"
     android:scaleType="center">

 </ImageView>

 <LinearLayout
     android:id="@+id/container1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal">

  <LinearLayout
      android:id="@+id/container2"
      android:layout_width="match_parent"
      android:layout_height="352dp"
      android:orientation="vertical"
      android:padding="10dp">


   <LinearLayout
       android:id="@+id/line1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

    <Button
        android:id="@+id/button_back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_btn_white"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/text_levels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right"
        android:padding="10dp"
        android:text="@string/level1"
        android:textColor="@color/white"
        android:textSize="24sp" />

   </LinearLayout>

   <LinearLayout
       android:id="@+id/line2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:orientation="horizontal">


    <TextView
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point3"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point4"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point5"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point6"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point7"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point8"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point9"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point10"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point11"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point12"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point13"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point14"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point15"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point16"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point17"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point18"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point19"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

    <TextView
        android:id="@+id/point20"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:background="@drawable/style_points" />

   </LinearLayout>

   <LinearLayout
       android:id="@+id/line3"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="10dp"
       android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/imgtest" />

    <LinearLayout
        android:id="@+id/containerButtom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

     <Button
         android:id="@+id/button_greater"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:textSize="25sp"
         android:background="@drawable/style_btn_white"

         android:text="@string/button_greater" />

     <Button
         android:id="@+id/button_equally"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity = "center_horizontal"
         android:gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:textSize="25sp"
         android:background="@drawable/style_btn_white"
         android:text="@string/button_ravno" />

     <Button
         android:id="@+id/button_less"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/style_btn_white"
         android:textSize="25sp"
         android:text="@string/button_less" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/imgtest" />
   </LinearLayout>

  </LinearLayout>

 </LinearLayout>


</RelativeLayout>